added comments to test case results
